AC_INIT(configure.in)
AC_PROG_INSTALL

if test -z "$with_jdk" -a -z "$with_guavac"
then
    with_jdk=yes
fi
if test -z "$with_jdk" -a -z "$with_kaffe"
then
    with_jdk=yes
fi

if test -n "$with_tya"
then
    JAVA_COMPILER=tya
fi

dnl
dnl Extra places to look for the JDK
dnl
JAVADIRS="/usr/local/java /usr/local/jdk /usr/local/jdk1.1 \
/usr/java /usr/jdk /usr/jdk1.1 \
/usr/lib/java /usr/lib/jdk /usr/lib/jdk1.1 \
/opt/java /opt/jdk /opt/jdk1.1"
JAVABINDIRS=`echo "${JAVADIRS} " | sed -e 's, ,/bin:,g' | sed -e 's,:$,,'`

dnl
dnl Extra places to look for kaffe
dnl
KAFFEBINDIRS="/usr/local/kaffe/bin /usr/kaffe/bin /usr/lib/kaffe/bin /opt/kaffe/bin"

dnl
dnl Extra places to look for guavac
dnl
GUAVACBINDIRS="/usr/local/guavac/bin /usr/guavac/bin /usr/lib/guavac/bin /opt/guavac/bin"

if test "$with_guavac" = "yes"
then
AC_PATH_PROG(JAVAC, guavac, javac, $GUAVACBINDIRS:$PATH)
elif test "$with_jdk" = "yes"
then
AC_PATH_PROG(JAVAC, javac, javac, $JAVABINDIRS:$PATH)
fi

if test "$with_kaffe" = "yes"
then
JAVACFLAGS=""
AC_PATH_PROG(JAVA, kaffe, java, $KAFFEBINDIRS:$PATH)
AC_PATH_PROG(JRE, jre, jre, $KAFFEBINDIRS:$PATH)
AC_PATH_PROG(JAVADOC, javadoc, javadoc, $KAFFEBINDIRS:$PATH)
AC_PATH_PROG(JAR, jar, jar, $KAFFEBINDIRS:$PATH)
elif test "$with_jdk" = "yes"
then
JAVACFLAGS="-O"
AC_PATH_PROG(JAVA, java, java, $JAVABINDIRS:$PATH)
AC_PATH_PROG(JRE, jre, jre, $JAVABINDIRS:$PATH)
AC_PATH_PROG(JAVADOC, javadoc, javadoc, $JAVABINDIRS:$PATH)
AC_PATH_PROG(JAR, jar, jar, $JAVABINDIRS:$PATH)
fi

AC_SUBST(JAVACFLAGS)
AC_SUBST(JAVA_COMPILER)

AC_PATH_PROG(ZIP, zip, false)
AC_PATH_PROG(TAR, tar, false)

AC_OUTPUT(Makefile src/Makefile src/muffin)
AC_OUTPUT_COMMANDS([chmod 755 src/muffin])
