dnl $Id: configure.in,v 1.4 1998/09/19 19:24:29 boyns Exp $

AC_INIT(configure.in)
AC_PROG_INSTALL

try_jikes=yes

if test -n "$with_tya"
then
    JAVA_COMPILER=tya
fi

dnl
dnl Extra places to look for the JDK
dnl
JAVADIRS="/usr/local/java /usr/local/jdk /usr/local/jdk1.1 \
/usr/java /usr/jdk /usr/jdk1.1 \
/usr/lib/java /usr/lib/jdk /usr/lib/jdk1.1 \
/opt/java /opt/jdk /opt/jdk1.1"
JAVABINDIRS=`echo "${JAVADIRS} " | sed -e 's, ,/bin:,g' | sed -e 's,:$,,'`

dnl
dnl Extra places to look for jikes
dnl
JIKESBINDIRS="/usr/local/jikes/bin /usr/jikes/bin \
/usr/lib/jikes/bin /opt/jikes/bin"

if test "$try_jikes" = "yes"
then
AC_PATH_PROG(JAVAC, jikes, javac, $JIKESBINDIRS:$PATH)
else
AC_PATH_PROG(JAVAC, javac, javac, $JAVABINDIRS:$PATH)
fi

JAVACFLAGS="-O"
AC_PATH_PROG(JAVA, java, java, $JAVABINDIRS:$PATH)
AC_PATH_PROG(JRE, jre, jre, $JAVABINDIRS:$PATH)
AC_PATH_PROG(JAVADOC, javadoc, javadoc, $JAVABINDIRS:$PATH)
AC_PATH_PROG(JAR, jar, jar, $JAVABINDIRS:$PATH)

AC_SUBST(JAVACFLAGS)
AC_SUBST(JAVA_COMPILER)

CLASSPATH=`dirname $JAVA`/../lib/classes.zip
AC_SUBST(CLASSPATH)

AC_PATH_PROG(ZIP, zip, false)
AC_PATH_PROG(TAR, tar, false)

AC_OUTPUT(Makefile src/Makefile src/muffin)
AC_OUTPUT_COMMANDS([chmod 755 src/muffin])
